--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "demo_project",
-    "short_name": "demo_project",
+    "name": "sky_nest",
+    "short_name": "sky_nest",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
