--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "demo_project" "\0"
+            VALUE "FileDescription", "sky_nest" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "demo_project" "\0"
+            VALUE "InternalName", "sky_nest" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "demo_project.exe" "\0"
-            VALUE "ProductName", "demo_project" "\0"
+            VALUE "OriginalFilename", "sky_nest.exe" "\0"
+            VALUE "ProductName", "sky_nest" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
