--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -19,7 +19,7 @@ flutter_native_splash:
   
   # Set the branding padding from the bottom of the screen.  The default value is 0
   # (Not supported on web yet)
-  # branding_bottom_padding: 24
+  branding_bottom_padding: 28
 
   # The color_dark, background_image_dark, image_dark, branding_dark are parameters that set the background
   # and image when the device is in dark mode. If they are not specified, the app will use the
@@ -29,7 +29,7 @@ flutter_native_splash:
   color_dark: "#EFB7FF"
   # background_image_dark: "assets/images/app_icon_skynest.png"
   image_dark: assets/images/app_icon_skynest.png
-  branding_dark: assets/images/app_branding_skynest.png
+  branding_dark: assets/images/app_branding_skynest_dark.jpg
 
   # From Android 12 onwards, the splash screen is handled differently than in previous versions.
   # Please visit https://developer.android.com/guide/topics/ui/splash-screen
@@ -44,23 +44,23 @@ flutter_native_splash:
     # 768 pixels in diameter.  To fit a 1152x1152 image within a circle with a 768 diameter, simply 
     # ensure that the most important design elements of your image are placed within a circular area
     # with a 768 diameter at the center of the 1152x1152 canvas.
-    #image: assets/android12splash.png
+    image: assets/images/app_icon_skynest.png
 
     # Splash screen background color.
-    #color: "#42a5f5"
+    color: "#2571e8"
 
     # App icon background color.
-    #icon_background_color: "#111111"
+    # icon_background_color: "#111111"
 
     # The branding property allows you to specify an image used as branding in the splash screen.
-    #branding: assets/dart.png
+    # branding: assets/dart.png
 
     # The image_dark, color_dark, icon_background_color_dark, and branding_dark set values that
     # apply when the device is in dark mode. If they are not specified, the app will use the
     # parameters from above.  If there is no parameter above, the app will use the light mode values.
-    #image_dark: assets/android12splash-invert.png
-    #color_dark: "#042a49"
-    #icon_background_color_dark: "#eeeeee"
+    image_dark: assets/images/app_icon_skynest.png
+    color_dark: "#EFB7FF"
+    icon_background_color_dark: "#2571e8"
 
   # The android, ios and web parameters can be used to disable generating a splash screen on a given
   # platform.
