--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -6,8 +6,8 @@ flutter_launcher_icons:
   android: "launcher_icon"
   # image_path_android: "assets/icon/icon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
-  background_color: "#FF2571e8"
-  # adaptive_icon_foreground: "assets/icon/foreground.png"
+  background_color: "#2571e8"
+  adaptive_icon_background: "#2571e8"
   # adaptive_icon_monochrome: "assets/icon/monochrome.png"
 
   ios: false
