--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   flex_color_scheme: ^8.2.0
   flutter_native_splash: ^2.4.6
+  hydrated_bloc: ^10.0.0
+  path_provider: ^2.1.5
   
 dev_dependencies:
   flutter_test:
