--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   hydrated_bloc: ^10.0.0
   path_provider: ^2.1.5
+  cached_network_image: ^3.4.1
   
 dev_dependencies:
   flutter_test:
