--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,13 @@ dependencies:
   cached_network_image: ^3.4.1
   skeletonizer: ^1.4.3
   fluttertoast: ^8.2.12
+  firebase_core: ^3.14.0
+  firebase_messaging: ^15.2.7
+  intl:
+  hive:
+  hive_flutter:
+
+  flutter_local_notifications:
   
 dev_dependencies:
   flutter_test:
